style: fixed icon sizing on tablet & mobile

--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -123,6 +123,11 @@ a {
 
   img {
     width: 20px;
+
+    // responsive to tablet
+    @media only screen and (max-width: $tablet) {
+      width: 18px;
+    }
   }
 
   p {
