--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -278,6 +278,11 @@ header {
 
         img {
             width: 75px;
+
+            // responsive to tablet
+            @media only screen and (max-width: $tablet) {
+                width: 60px;
+            }
         }
     }
 }
@@ -571,6 +576,12 @@ header {
 
                     .button {
                         padding: 10px;
+                        gap: 4px;
+
+                        img {
+                            width: 14px;
+                            padding-top: 2px;
+                        }
                         
                         &:hover, &:focus {
                             background-color: $white;
@@ -653,6 +664,7 @@ header {
                 // responsive to mobile
                 @media only screen and (max-width: $mobile) {
                     font-size: 12px;
+                    width: 17px;
                 }
             }
 
